--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.17",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.2"
   }
 }
