--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "ws_task",
   "version": "1.0.0",
   "description": "Template for the WebSocket remote control task",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "start": "node ./index.js",
-    "start:prod": "npm run build && node dist/index.js",
-    "start:dev": "nodemon ./index.js",
-    "build": "npm run lint && npm run test && webpack --mode production",
+    "start:front": "ts-node ./index.ts",
+    "start:dev": "nodemon ./src/index.ts",
     "lint": "eslint \"src/**/*.{ts,js}\"",
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
     "test": "jest"
@@ -36,9 +33,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
-    "webpack": "^5.99.8",
-    "webpack-cli": "^6.0.1"
+    "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
     "uuid": "^11.1.0",
